Remove dumb overflow bug

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,7 +5,6 @@
 
 body {
   font-family: 'Mulish', sans-serif!important;
-  overflow-y: hidden;
 }
 
 p {
